syntax = "proto3";
package fairyring.pep;

option go_package = "github.com/FairBlock/fairyring/x/pep/types";

message PepNonce {
  string address = 1; 
  uint64 nonce = 2; 
  
}

